[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GuitarKaraoke"
version = "0.1.0"
description = "Remove (approximate) guitar from audio using Demucs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Fairchild" }]
dependencies = [
  "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/wpf99/guitarKaraoke"

[project.scripts]
guitarkaraoke = "remove_guitar:main"
